# cpp_image_processor

./: CMakeLists.txt  README.md  image_processor.cpp
src/: Filters.h  Image.cpp  Image.h  Parser.cpp  Parser.h  Processor.cpp  Processor.h  RGB.cpp  RGB.h  RealizeFilters.cpp  RealizeFilters.h  open_save.cpp  open_save.h
src/Filters/: Fisheye.cpp  Fisheye.h  blur.cpp  blur.h  coal_drawing.cpp  coal_drawing.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  grayscale.cpp  grayscale.h  negative_filter.cpp  negative_filter.h  sharpening.cpp  sharpening.h
