add_executable(
        image_processor
        image_processor.cpp
        src/RGB.cpp
        src/RGB.h
        src/Image.cpp
        src/Image.h
        src/open_save.cpp
        src/open_save.h
        src/Filters.h
        src/Filters/negative_filter.cpp
        src/Filters/negative_filter.h
        src/Filters/negative_filter.cpp
        src/Filters/negative_filter.cpp
        src/Filters/negative_filter.cpp
        src/Filters/negative_filter.cpp
        src/Filters/grayscale.cpp
        src/Filters/grayscale.h
        src/Filters/grayscale.h
        src/Filters/grayscale.cpp
        src/Filters/crop.cpp
        src/Filters/crop.h
        src/Filters/crop.h
        src/Filters/crop.cpp
        src/Filters/sharpening.cpp
        src/Filters/sharpening.h
        src/Filters/edge_detection.h
        src/Filters/edge_detection.cpp
        src/Parser.cpp
        src/Parser.h
        src/RealizeFilters.cpp
        src/RealizeFilters.h
        src/Processor.cpp
        src/Processor.h
        src/Filters/blur.h
        src/Filters/blur.cpp
        src/Filters/coal_drawing.h
        src/Filters/coal_drawing.cpp
        src/Filters/Fisheye.h
        src/Filters/Fisheye.cpp)
